Add logging, make HTTP server work, add TLS to application server.