@@ -7,7 +7,9 @@ repositories {
 }
 
 sourceSets.main.java.srcDirs = [ "src/main/java", "../gen/" ]
-
+sourceSets.main.resources.srcDirs = [ "src/main/resources" ]
+sourceCompatibility = 17
+targetCompatibility = 17
 
 dependencies {
     implementation 'com.google.protobuf:protobuf-java:3.19.1'
@@ -15,19 +17,14 @@ dependencies {
 
     implementation 'com.google.oauth-client:google-oauth-client:1.32.1'
     implementation 'io.netty:netty-tcnative-boringssl-static:2.0.46.Final'
+
+    implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
+    implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.13.1'
 }
 
 application {
     mainClass = 'org.delusion.afterline.server.AfterlineServer'
-    applicationDefaultJvmArgs = ['--enable-preview']
-}
-
-tasks.withType(JavaCompile) {
-    options.compilerArgs += '--enable-preview'
-}
-
-tasks.withType(Test) {
-    jvmArgs += "--enable-preview"
 }
 
 
@@ -39,9 +36,11 @@ jar {
         )
     }
 
-    from {
-        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
-    }
+    // from { 
+    //     configurations.runtimeClasspath.collect {
+    //         it.isDirectory() ? it : zipTree(it).matching{exclude{it.path.contains('META-INF')}}
+    //     }    
+    // }
 }
 
 
