@@ -4,8 +4,22 @@ export AFTERLINE_KEY=/srv/cert/untrusted/key.pem
 export AFTERLINE_GAPI_CREDENTIALS=/srv/afterline/google_credentials.json
 
 cd /srv/afterline/Afterline/server
-./gradlew jar -Dorg.gradle.java.home=/usr/lib/jvm/java-13-openjdk-amd64/ 
+./gradlew distZip
+
+
+if [ $1 = "-i" ]; then
+    echo "Enter to continue"
+    read
+fi
 
 cd /srv/afterline/run
 
-java13 --enable-preview -jar server.jar
+[[ -d "server" ]] && rm -r server
+
+unzip /srv/afterline/Afterline/server/build/distributions/server.zip
+
+clear
+
+export JAVA_OPTS=-Dlog4j2.formatMsgNoLookups=true
+
+./server/bin/server
